-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.0-beta1
-
None
-
20366297ed961a4726e017c43f1c366e4edcb31e (qt-creator/qt-creator/5.0)
my cmake projects allow certain targets to be switched by depending on cmake configurations.
something like:
option( FOO "" ON )
if (FOO)
add_executable(bar)
endif()
with qtcreator 5.0, i'm seeing the following behaviour:
- the locator bar is up to date: if FOO==OFF, then `cm` does not list the target bar
- the "projects -> run settings" page however still lists `bar`, if `FOO==OFF`
- the target selector (the icon above the "RUN" icon) also lists `bar`, if `FOO==OFF`
this is a bit confusing, as a user can select targets, which are not available anymore and the target list is rather bloated (in my cases i end up with dozens of non-existent targets)